rusty-cdk-macros/tests/fails/memory_boundary_low.rs
use rusty_cdk_macros::memory;

fn example() {
    let mem = memory!(127);
}

fn main() {}